# hpcc-js-wasm

./: .copilot-instructions.md  .copilot-patterns.md  .copilot-summary.md  .copilot-workflow.md  .dockerignore  .eslintrc.cjs  .gitattributes  .gitignore  .nycrc  .release-please-manifest.json  .travis.yml  404.html  CHANGELOG.html  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.html  README.md  cpp-build.sh  cpp-install-graphviz.sh  cpp-update-emsdk.sh  esbuild.mjs  eslint.config.js  getting-started.html  graphviz-cli.html  hashmap.json  helloworld.html  hw-base91.html  hw-graphviz.html  hw-zstd.html  index-worker.js  index.html  index.md  karma.conf.cjs  karma.conf.js  lerna.json  package-lock.json  package.json  release-please-config.json  rollup-sfx.config.mjs  (+11 more)
.github/: copilot-instructions.md  dependabot.yml
.vitepress/: config.js
assets/: CHANGELOG.md.BWbpnkO8.js  CHANGELOG.md.BWbpnkO8.lean.js  CHANGELOG.md.BXZQNVQ6.js  CHANGELOG.md.BXZQNVQ6.lean.js  CHANGELOG.md.BhNtbHvU.js  CHANGELOG.md.BhNtbHvU.lean.js  CHANGELOG.md.CROzsbvS.js  CHANGELOG.md.CROzsbvS.lean.js  CHANGELOG.md.CbdCoIl_.js  CHANGELOG.md.CbdCoIl_.lean.js  CHANGELOG.md.Dn4e0Y1S.js  CHANGELOG.md.Dn4e0Y1S.lean.js  CHANGELOG.md.DuAaWWum.js  CHANGELOG.md.DuAaWWum.lean.js  CHANGELOG.md.eUpssKwV.js  CHANGELOG.md.eUpssKwV.lean.js  README.md.7zaELIPG.js  README.md.7zaELIPG.lean.js  README.md.B4lV-Kxf.js  README.md.B4lV-Kxf.lean.js  README.md.BCN6skiM.js  README.md.BCN6skiM.lean.js  README.md.BX2dGNWT.js  README.md.BX2dGNWT.lean.js  README.md.BoRkjhha.js  README.md.BoRkjhha.lean.js  README.md.CEg-X1vF.js  README.md.CEg-X1vF.lean.js  README.md.CmiHWf26.js  README.md.CmiHWf26.lean.js  README.md.DoCNtlHd.js  README.md.DoCNtlHd.lean.js  README.md.vDTJn0Ua.js  README.md.vDTJn0Ua.lean.js  app.BxktV_LE.js  app.CTaHAbim.js  app.CWZTyJhO.js  app.Cc_hH0jr.js  app.DNp2rZh0.js  app.DYfbxZcV.js  (+698 more)
classes/: base91.Base91.html  expat.Expat.html  expat.StackElement.html  expat.StackParser.html  graphviz.Graphviz.html  wasm_library.WasmLibrary.html  zstd.Zstd.html
cpp/: CMakeLists.txt
cpp/base91/: CMakeLists.txt  main.cpp
cpp/expat/: CMakeLists.txt  config.h  expat_config.h
cpp/expat/expatlib/: CMakeLists.txt  main.cpp  main.idl  stack_parser.h
cpp/graphviz/: CMakeLists.txt  config.h
cpp/graphviz/graphvizlib/: CMakeLists.txt  fs.cpp  main.cpp  main.hpp  main.idl
cpp/graphviz/lib/: CMakeLists.txt
cpp/graphviz/lib/cdt/: CMakeLists.txt
cpp/graphviz/lib/cgraph/: CMakeLists.txt
cpp/graphviz/lib/cgraph++/: CMakeLists.txt
cpp/graphviz/lib/circogen/: CMakeLists.txt
cpp/graphviz/lib/common/: CMakeLists.txt
cpp/graphviz/lib/dotgen/: CMakeLists.txt
cpp/graphviz/lib/expat/: CMakeLists.txt
cpp/graphviz/lib/fdpgen/: CMakeLists.txt
cpp/graphviz/lib/gvc/: CMakeLists.txt
cpp/graphviz/lib/ingraphs/: CMakeLists.txt
cpp/graphviz/lib/label/: CMakeLists.txt
cpp/graphviz/lib/neatogen/: CMakeLists.txt
cpp/graphviz/lib/ortho/: CMakeLists.txt
cpp/graphviz/lib/osage/: CMakeLists.txt
cpp/graphviz/lib/pack/: CMakeLists.txt
cpp/graphviz/lib/patchwork/: CMakeLists.txt
cpp/graphviz/lib/pathplan/: CMakeLists.txt
cpp/graphviz/lib/rbtree/: CMakeLists.txt
cpp/graphviz/lib/sfdpgen/: CMakeLists.txt
cpp/graphviz/lib/sparse/: CMakeLists.txt
cpp/graphviz/lib/twopigen/: CMakeLists.txt
cpp/graphviz/lib/vpsc/: CMakeLists.txt
cpp/graphviz/lib/xdot/: CMakeLists.txt
cpp/graphviz/plugin/: CMakeLists.txt
cpp/graphviz/plugin/core/: CMakeLists.txt
cpp/graphviz/plugin/dot_layout/: CMakeLists.txt
cpp/graphviz/plugin/neato_layout/: CMakeLists.txt
cpp/src/: pre.js
cpp/zstd/: CMakeLists.txt  main.cpp  main.idl
docker/: ubuntu-dev.dockerfile
docs/: README.html  bundler-integration-tests.html  bundler-integration-tests.md  getting-started.html  getting-started.md  graphviz-cli.html  graphviz-cli.md  index.md  llama-cli.html  llama-cli.md
interfaces/: expat.IParser.html  graphviz.File.html  graphviz.Image.html  graphviz.Options.html  wasm_library.HeapU8.html
modules/: base91.html  expat.html  graphviz.html  wasm_library.html  zstd.html
scripts/: cmake.sh  cpp-build.sh  cpp-install-emsdk.sh  cpp-install-expat.sh  cpp-install-graphviz.sh  cpp-install-prerequisites.sh  cpp-install-vcpkg.sh  cpp-update-emsdk.sh  install-bundler-deps.sh  test-bundlers.sh  touch-packages.mjs
src/: base91.ts  cli.js  expat.ts  extract.ts  fetch-browser.ts  fetch-node.ts  graphviz.ts  index-common.ts  index-node.ts  index.ts  sfx-graphviz.ts  util.ts  wasm-library.ts  worker.ts  (+1 more)
src-cpp/: CMakeLists.txt
src-cpp/expat/expatlib/: CMakeLists.txt  stack_parser.h
src-cpp/graphviz/: CMakeLists.txt  config.h  main.cpp  main.hpp  main.idl  util.cpp  util.hpp
src-cpp/graphviz/graphvizlib/: CMakeLists.txt  main.cpp
src-cpp/graphviz/lib/: CMakeLists.txt
src-cpp/graphviz/lib/circogen/: CMakeLists.txt
src-cpp/graphviz/lib/dotgen/: CMakeLists.txt
src-cpp/graphviz/lib/fdpgen/: CMakeLists.txt
src-cpp/graphviz/lib/gvc/: CMakeLists.txt
src-cpp/graphviz/lib/gvc++/: CMakeLists.txt
src-cpp/graphviz/lib/ingraphs/: CMakeLists.txt
src-cpp/graphviz/lib/neatogen/: CMakeLists.txt
src-cpp/graphviz/lib/ortho/: CMakeLists.txt
src-cpp/graphviz/lib/osage/: CMakeLists.txt
src-cpp/graphviz/lib/rbtree/: CMakeLists.txt
src-cpp/graphviz/lib/sfdpgen/: CMakeLists.txt
src-cpp/graphviz/lib/sparse/: CMakeLists.txt
src-cpp/graphviz/lib/vpsc/: CMakeLists.txt
src-cpp/graphviz/lib/xdot/: CMakeLists.txt
src-cpp/graphviz/plugin/: CMakeLists.txt
src-cpp/graphviz/plugin/dot_layout/: CMakeLists.txt
src-cpp/graphviz/plugin/neato_layout/: CMakeLists.txt
src-cpp/llama/: CMakeLists.txt  main.cpp  main.idl
src-ts/: base91.ts  expat.ts  extract.ts  graphviz.ts  index.ts  llama.ts  wasm-library.ts
vcpkg-overlays/base91/: CMakeLists.txt  base91.hpp  portfile.cmake  vcpkg.json
vcpkg-overlays/graphviz/: CMakeLists.txt  portfile.cmake  vcpkg.json
vcpkg-overlays/graphviz/cmake/: config_checks.cmake
vcpkg-overlays/nam-core/: CMakeLists.txt  portfile.cmake  vcpkg.json
vcpkg-overlays/nam-core/cmake/: NeuralAmpModelerCoreConfig.cmake.in
(+178 files in other folders)
