CMAKE_MINIMUM_REQUIRED(VERSION 3.9.2)

PROJECT(cpp)

SET(CMAKE_INSTALL_PREFIX "..")

SET(EMSDK_DIR "${CMAKE_SOURCE_DIR}/../emsdk")
SET(EXPAT_DIR "${CMAKE_SOURCE_DIR}/../src-expat/expat")
SET(GRAPHVIZ_DIR "${CMAKE_SOURCE_DIR}/../src-graphviz")

SET(EM_FLAGS "-s WASM=1 -s INVOKE_RUN=0 -s ALLOW_MEMORY_GROWTH=1 -s MODULARIZE=2")

ADD_SUBDIRECTORY(expat)
ADD_SUBDIRECTORY(graphviz)
