PROJECT(graphlayout)

set(TOP_SOURCE_DIR   "${GRAPHVIZSRC_DIRS}")
SET(GRAPHVIZ_LIB_DIR "${GRAPHVIZSRC_DIRS}/lib")
SET(GRAPHVIZ_BIN_DIR "${GRAPHVIZSRC_DIRS}/build/lib")

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
)

ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(plugin)
ADD_SUBDIRECTORY(graphvizlib)
